--- a/nuevoarticulo.html
+++ b/nuevoarticulo.html
@@ -11,7 +11,8 @@
     <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Neuton' rel='stylesheet'>
     <script src="/script/CustomNav.js"></script>
-    <script src="/script/CustomFooter.js"></script> 
+    <script src="/script/CustomFooter.js"></script>
+    <script src="/script/cargarusuario.js"></script> 
 </head>
 
 <body>
