--- a/registro.html
+++ b/registro.html
@@ -21,11 +21,11 @@
     <div class="cuerpo">
         <form action="/action_page.php">
             <h2 class="unico">Registro</h2>
-            <input type="text" id="fname" name="fname" placeholder="Usuario" class="medio">
-            <input type="text" id="lname" name="lname" placeholder="Contraseña" class="medio">
-            <input type="text" id="fname" name="fname" placeholder="Fecha de Nacimiento" class="medio">
-            <input type="text" id="lname" name="lname" placeholder="Confirmar Contraseña" class="medio">
-            <input type="email" id="email" name="lname" placeholder="Correo Electronico "class="unico">
+            <input type="text" id="usuario" name="usuario" placeholder="Usuario" class="medio">
+            <input type="text" id="password" name="password" placeholder="Contraseña" class="medio">
+            <input type="text" id="date" name="date" placeholder="Fecha de Nacimiento" class="medio">
+            <input type="text" id="cfpassword" name="cfpassword" placeholder="Confirmar Contraseña" class="medio">
+            <input type="email" id="email" name="email" placeholder="Correo Electronico "class="unico">
             <input type="submit" value="Registrase" class="unico">
           </form> 
     </div>
